# autofile

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
autofile/: core.py
tests/: test_core.py
tests/sample-data/text/: invoice_01.txt  invoice_02.txt
