[project]
name = "autofile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
lint = [
    "ruff>=0.12.1",
]

[tool.pytest.ini_options]
addopts = "-v -rP"
pythonpath = ["."]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml"]
